# sentiment-analysis-back

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  startup.sh  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: example-service-1.yml  example-service-2.yml  horusec-scan.yml  pytest-reusable-workflow.yml  reusable-horusec-build-deploy-workflow.yml  reusable-horusec-ignore.yml  reusable-trivy-ignore.yml  trivy-scan-reuseable-workflow.yml
app/: routes.py  server.py
app/dummy_users/handlers/: dummy_users.py
app/dummy_users/models/: dummy_users.py
app/dummy_users/schema/: requests.py  response.py
config/: config.py
config/logger/: log_processors.py  logger_config.py
datastores/database/postgres/: session.py
migrations/: env.py
migrations/versions/: 6228a30baab7_create_user_table.py
sentiment_model/: bert_khmer.py  full_tokenizer.py  preprocessing.py  sa_bilstm.py  sa_model.py  sentiment_nb.pkl
utils/dependencies/: database.py
utils/exceptions/: exceptions.py
